src/objects/PSA_Expense_Policy__c.object
<CustomObject>
    <description>Guidewire’s internal, customer-specific, and project specific expense policy information that will facilitate expense entry and approval review processes will be stored in the PSA Expense Policy custom object.</description>
    <fields>
        <fullName>PSA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For customer-wide policies. (Optional).  If this is specified, then no project should be provided.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PSA Expense Policies</relationshipLabel>
        <relationshipName>PSA_Expense_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Amount_Review_Threshold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount over which an expense will need the amount reviewed</description>
        <label>Amount Review Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Billable_Limit__c</fullName>
        <description>An amount over which the remainder of any expense will be set as non-billable</description>
        <label>Billable Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Expense_Type__c</fullName>
        <label>Expense Type</label>
        <picklist>
            <picklistValues>
                <fullName>Airfare - Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airfare - International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visas/Passport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxi/Train/Public Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking/Tolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas for Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Self - Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - GW Emp Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - With 3rd Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meals - Per Diem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertain - GW Emp only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertain - With 3rd Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom - Mobile (Cell)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom - Non Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency exch/bank fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excess Baggage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Expense - T &amp; E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laundry/Dry Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postage/Courier Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relocation Exp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Prep Cost for Addtl State(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tips/Gratuities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept/Co Meetings &amp; Events</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Policy_Id__c</fullName>
        <description>System-generated sequential id, e.g., “EP-1203”</description>
        <displayFormat>EP-{0000}</displayFormat>
        <label>Policy Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PSA_Policy_Type__c</fullName>
        <description>For specifying the currency of any policies based on expense amounts, for limits or thresholds</description>
        <label>Policy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Billing Limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipt Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount Review Threshold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For project-specific policies. (Optional). This should be used for internal expense policies in addition to customer project policies.  If specified, no Account should be specified.</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>PSA Expense Policies</relationshipLabel>
        <relationshipName>PSA_Expense_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Receipt_Required_Threshold__c</fullName>
        <description>An amount over which the expense will be flagged as “Receipt Required,” If no record exists for the expense type, or if this value is 0, it will be assumed that a receipt is always required regardless of amount.</description>
        <label>Receipt Required Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PSA Expense Policy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Account__c</columns>
        <columns>PSA_Project__c</columns>
        <columns>PSA_Expense_Type__c</columns>
        <columns>PSA_Policy_Type__c</columns>
        <columns>PSA_Amount_Review_Threshold__c</columns>
        <columns>PSA_Billable_Limit__c</columns>
        <columns>PSA_Policy_Id__c</columns>
        <columns>PSA_Receipt_Required_Threshold__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Global_Policies</fullName>
        <columns>NAME</columns>
        <columns>PSA_Expense_Type__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>PSA_Receipt_Required_Threshold__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Global</value>
        </filters>
        <label>Global Policies</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ZAR_Expense_Policies</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>PSA_Account__c</columns>
        <columns>PSA_Amount_Review_Threshold__c</columns>
        <columns>PSA_Billable_Limit__c</columns>
        <columns>PSA_Expense_Type__c</columns>
        <columns>PSA_Policy_Id__c</columns>
        <columns>PSA_Policy_Type__c</columns>
        <columns>PSA_Project__c</columns>
        <columns>PSA_Receipt_Required_Threshold__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>ZAR</value>
        </filters>
        <label>ZAR Expense Policies</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PSA Expense Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA Expense Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>